--- a/src/core/variables/effects.css
+++ b/src/core/variables/effects.css
@@ -22,77 +22,77 @@
     --tk-filter-blur-9x: blur(24px);
     --tk-filter-blur-full: blur(100px);
 
-    --tk-filter-brightness-0: brightness(0);
-    --tk-filter-brightness-1x: brightness(1.5);
-    --tk-filter-brightness-2x: brightness(1.5);
-    --tk-filter-brightness-3x: brightness(1.5);
+    --tk-filter-brightness-0: brightness(1);
+    --tk-filter-brightness-1x: brightness(1.1);
+    --tk-filter-brightness-2x: brightness(1.2);
+    --tk-filter-brightness-3x: brightness(1.35);
     --tk-filter-brightness-4x: brightness(1.5);
-    --tk-filter-brightness-5x: brightness(1.5);
-    --tk-filter-brightness-6x: brightness(1.5);
-    --tk-filter-brightness-7x: brightness(1.5);
-    --tk-filter-brightness-8x: brightness(1.5);
-    --tk-filter-brightness-9x: brightness(1.5);
-    --tk-filter-brightness-full: brightness(1.5);
+    --tk-filter-brightness-5x: brightness(1.7);
+    --tk-filter-brightness-6x: brightness(2);
+    --tk-filter-brightness-7x: brightness(2.5);
+    --tk-filter-brightness-8x: brightness(3);
+    --tk-filter-brightness-9x: brightness(4);
+    --tk-filter-brightness-full: brightness(5);
 
-    --tk-filter-contrast-0: contrast(1.2);
-    --tk-filter-contrast-1x: contrast(1.2);
-    --tk-filter-contrast-2x: contrast(1.2);
+    --tk-filter-contrast-0: contrast(1);
+    --tk-filter-contrast-1x: contrast(1.05);
+    --tk-filter-contrast-2x: contrast(1.1);
     --tk-filter-contrast-3x: contrast(1.2);
-    --tk-filter-contrast-4x: contrast(1.2);
-    --tk-filter-contrast-5x: contrast(1.2);
-    --tk-filter-contrast-6x: contrast(1.2);
-    --tk-filter-contrast-7x: contrast(1.2);
-    --tk-filter-contrast-8x: contrast(1.2);
-    --tk-filter-contrast-9x: contrast(1.2);
-    --tk-filter-contrast-full: contrast(1.2);
+    --tk-filter-contrast-4x: contrast(1.35);
+    --tk-filter-contrast-5x: contrast(1.5);
+    --tk-filter-contrast-6x: contrast(1.75);
+    --tk-filter-contrast-7x: contrast(2);
+    --tk-filter-contrast-8x: contrast(2.5);
+    --tk-filter-contrast-9x: contrast(3);
+    --tk-filter-contrast-full: contrast(4);
 
-    --tk-filter-grayscale-0: grayscale(100%);
-    --tk-filter-grayscale-1x: grayscale(100%);
-    --tk-filter-grayscale-2x: grayscale(100%);
-    --tk-filter-grayscale-3x: grayscale(100%);
-    --tk-filter-grayscale-4x: grayscale(100%);
-    --tk-filter-grayscale-5x: grayscale(100%);
-    --tk-filter-grayscale-6x: grayscale(100%);
-    --tk-filter-grayscale-7x: grayscale(100%);
-    --tk-filter-grayscale-8x: grayscale(100%);
-    --tk-filter-grayscale-9x: grayscale(100%);
+    --tk-filter-grayscale-0: grayscale(0%);
+    --tk-filter-grayscale-1x: grayscale(10%);
+    --tk-filter-grayscale-2x: grayscale(20%);
+    --tk-filter-grayscale-3x: grayscale(30%);
+    --tk-filter-grayscale-4x: grayscale(40%);
+    --tk-filter-grayscale-5x: grayscale(50%);
+    --tk-filter-grayscale-6x: grayscale(60%);
+    --tk-filter-grayscale-7x: grayscale(70%);
+    --tk-filter-grayscale-8x: grayscale(80%);
+    --tk-filter-grayscale-9x: grayscale(90%);
     --tk-filter-grayscale-full: grayscale(100%);
 
-    --tk-filter-hue-rotate-0: hue-rotate(90deg);
-    --tk-filter-hue-rotate-1x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-2x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-3x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-4x: hue-rotate(90deg);
+    --tk-filter-hue-rotate-0: hue-rotate(0deg);
+    --tk-filter-hue-rotate-1x: hue-rotate(15deg);
+    --tk-filter-hue-rotate-2x: hue-rotate(30deg);
+    --tk-filter-hue-rotate-3x: hue-rotate(45deg);
+    --tk-filter-hue-rotate-4x: hue-rotate(60deg);
     --tk-filter-hue-rotate-5x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-6x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-7x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-8x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-9x: hue-rotate(90deg);
-    --tk-filter-hue-rotate-full: hue-rotate(90deg);
+    --tk-filter-hue-rotate-6x: hue-rotate(120deg);
+    --tk-filter-hue-rotate-7x: hue-rotate(180deg);
+    --tk-filter-hue-rotate-8x: hue-rotate(240deg);
+    --tk-filter-hue-rotate-9x: hue-rotate(300deg);
+    --tk-filter-hue-rotate-full: hue-rotate(360deg);
 
-    --tk-filter-invert-0: invert(100%);
-    --tk-filter-invert-1x: invert(100%);
-    --tk-filter-invert-2x: invert(100%);
-    --tk-filter-invert-3x: invert(100%);
-    --tk-filter-invert-4x: invert(100%);
-    --tk-filter-invert-5x: invert(100%);
-    --tk-filter-invert-6x: invert(100%);
-    --tk-filter-invert-7x: invert(100%);
-    --tk-filter-invert-8x: invert(100%);
-    --tk-filter-invert-9x: invert(100%);
+    --tk-filter-invert-0: invert(0%);
+    --tk-filter-invert-1x: invert(10%);
+    --tk-filter-invert-2x: invert(20%);
+    --tk-filter-invert-3x: invert(30%);
+    --tk-filter-invert-4x: invert(40%);
+    --tk-filter-invert-5x: invert(50%);
+    --tk-filter-invert-6x: invert(60%);
+    --tk-filter-invert-7x: invert(70%);
+    --tk-filter-invert-8x: invert(80%);
+    --tk-filter-invert-9x: invert(90%);
     --tk-filter-invert-full: invert(100%);
 
-    --tk-filter-saturate-0: saturate(2);
-    --tk-filter-saturate-1x: saturate(2);
-    --tk-filter-saturate-2x: saturate(2);
-    --tk-filter-saturate-3x: saturate(2);
-    --tk-filter-saturate-4x: saturate(2);
-    --tk-filter-saturate-5x: saturate(2);
+    --tk-filter-saturate-0: saturate(0);
+    --tk-filter-saturate-1x: saturate(0.25);
+    --tk-filter-saturate-2x: saturate(0.5);
+    --tk-filter-saturate-3x: saturate(0.75);
+    --tk-filter-saturate-4x: saturate(1);
+    --tk-filter-saturate-5x: saturate(1.5);
     --tk-filter-saturate-6x: saturate(2);
-    --tk-filter-saturate-7x: saturate(2);
-    --tk-filter-saturate-8x: saturate(2);
-    --tk-filter-saturate-9x: saturate(2);
-    --tk-filter-saturate-full: saturate(2);
+    --tk-filter-saturate-7x: saturate(3);
+    --tk-filter-saturate-8x: saturate(4);
+    --tk-filter-saturate-9x: saturate(6);
+    --tk-filter-saturate-full: saturate(8);
 
     --tk-filter-sepia-0: sepia(0%);
     --tk-filter-sepia-1x: sepia(10%);
